--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="font/woff2"
       crossorigin
     />
-    <title>Vercel + GitHub + Auth0 = ❤️</title>
+    <title>JJ Vercel + GitHub + Auth0 = ❤️</title>
     <style>
       @font-face {
         font-family: fakt-web;
